--- a/imaging/_code/viewer.html
+++ b/imaging/_code/viewer.html
@@ -447,6 +447,8 @@
       <option value="TH1">TH1</option>
       <option value="TH2">TH2</option>
       <option value="VACHT">VACHT</option>
+      <option value="CHAT1A">CHAT1A</option>
+      <option value="SST1">SST1</option>
     </select></label>
     <label for="mask_menu">Mask<select name="mask_menu" id="mask_menu" oninput="update()">
       <option value="none" selected>-</option>
