--- a/imaging/_code/viewer.html
+++ b/imaging/_code/viewer.html
@@ -189,41 +189,50 @@
   stack_reference = new Stack("DAPI", "lines");
 
   // Specify line stacks
-  stack_chat1a = new Stack("CHAT1A", "lines");
-  stack_crh = new Stack("CRH", "lines");
-  stack_dat = new Stack("DAT", "lines");
-  stack_galn = new Stack("GALN", "lines");
-  stack_hdc = new Stack("HDC", "lines");
-  stack_npy = new Stack("NPY", "lines");
-  stack_otpa = new Stack("OTPA", "lines");
-  stack_otpb = new Stack("OTPB", "lines");
-  stack_oxt = new Stack("OXT", "lines");
-  stack_slc6a4a = new Stack("SLC6A4A", "lines");
-  stack_slc6a4b = new Stack("SLC6A4B", "lines");
-  stack_sst1 = new Stack("SST1", "lines");
-  stack_th1 = new Stack("TH1", "lines");
-  stack_vacht = new Stack("VACHT", "lines");
+  stack_AVP = new Stack("AVP", "lines");
+  stack_CB1 = new Stack("CB1", "lines");
+  stack_CHAT1A = new Stack("CHAT1A", "lines");
+  stack_CRH = new Stack("CRH", "lines");
+  stack_DAT = new Stack("DAT", "lines");
+  stack_GALN = new Stack("GALN", "lines");
+  stack_HDC = new Stack("HDC", "lines");
+  stack_KISS1 = new Stack("KISS1", "lines");
+  stack_NPY = new Stack("NPY", "lines");
+  stack_OTPA = new Stack("OTPA", "lines");
+  stack_OTPB = new Stack("OTPB", "lines");
+  stack_OXT = new Stack("OXT", "lines");
+  stack_SLC6A4A = new Stack("SLC6A4A", "lines");
+  stack_SLC6A4B = new Stack("SLC6A4B", "lines");
+  stack_SST1 = new Stack("SST1", "lines");
+  stack_TH1 = new Stack("TH1", "lines");
+  stack_TH2 = new Stack("TH2", "lines");
+  stack_VACHTB = new Stack("VACHTB", "lines");
 
   // Specify mask stacks
-  stack_dl = new Stack("DL", "masks");
-  stack_hb = new Stack("Hb", "masks");
-  stack_hc = new Stack("Hc", "masks");
-  stack_hd = new Stack("Hd", "masks");
+  stack_dENT = new Stack("dENT", "masks");
+  stack_DL = new Stack("DL", "masks");
+  stack_GC = new Stack("GC", "masks");
+  stack_Hb = new Stack("Hb", "masks");
+  stack_Hc = new Stack("Hc", "masks");
+  stack_Hd = new Stack("Hd", "masks");
+  stack_IPN = new Stack("IPN", "masks");
   stack_LC = new Stack("LC", "masks");
+  stack_LR = new Stack("LR", "masks");
   stack_NLV = new Stack("NLV", "masks");
   stack_NMLF = new Stack("NMLF", "masks");
-  stack_ob = new Stack("OB", "masks");
-  stack_ot = new Stack("OT", "masks");
-  stack_p = new Stack("P", "masks");
-  stack_pgz = new Stack("PGZ", "masks");
-  stack_poa = new Stack("PoA", "masks");
-  stack_ppd = new Stack("PPd", "masks");
-  stack_ppv = new Stack("PPv", "masks");
-  stack_prt = new Stack("PrT", "masks");
-  stack_pt = new Stack("PT", "masks");
-  stack_sbp = new Stack("sbP", "masks");
-  stack_sr = new Stack("SR", "masks");
-  stack_vhb = new Stack("vHb", "masks");
+  stack_OB = new Stack("OB", "masks");
+  stack_OT = new Stack("OT", "masks");
+  stack_P = new Stack("P", "masks");
+  stack_PGZ = new Stack("PGZ", "masks");
+  stack_PoA = new Stack("PoA", "masks");
+  stack_PPd = new Stack("PPd", "masks");
+  stack_PPv = new Stack("PPv", "masks");
+  stack_PrT = new Stack("PrT", "masks");
+  stack_PT = new Stack("PT", "masks");
+  stack_sbP = new Stack("sbP", "masks");
+  stack_SR = new Stack("SR", "masks");
+  stack_TSc = new Stack("TSc", "masks");
+  stack_vENT = new Stack("vENT", "masks");
 
   // Set auto callbacks
   setInterval(update, 250);
@@ -298,74 +307,94 @@
 
     // Select Line
     var display_line = false;
+      if (line_option == "AVP")
+    {
+      stack_line = stack_AVP;
+      display_line = true;
+    }
+      if (line_option == "CB1")
+    {
+      stack_line = stack_CB1;
+      display_line = true;
+    }
     if (line_option == "CHAT1A")
     {
-      stack_line = stack_chat1a;
+      stack_line = stack_CHAT1A;
       display_line = true;
     }
     if (line_option == "CRH")
     {
-      stack_line = stack_crh;
+      stack_line = stack_CRH;
       display_line = true;
     }
     if (line_option == "DAT")
     {
-      stack_line = stack_dat;
+      stack_line = stack_DAT;
       display_line = true;
     }
     if (line_option == "GALN")
     {
-      stack_line = stack_galn;
+      stack_line = stack_GALN;
       display_line = true;
     }
     if (line_option == "HDC")
     {
-      stack_line = stack_hdc;
+      stack_line = stack_HDC;
+      display_line = true;
+    }
+     if (line_option == "KISS1")
+    {
+      stack_line = stack_KISS1;
       display_line = true;
     }
     if (line_option == "NPY")
     {
-      stack_line = stack_npy;
+      stack_line = stack_NPY;
       display_line = true;
     }
     if (line_option == "OTPA")
     {
-      stack_line = stack_otpa;
+      stack_line = stack_OTPA;
       display_line = true;
     }
     if (line_option == "OTPB")
     {
-      stack_line = stack_otpb
+      stack_line = stack_OTPB
       display_line = true;
     }
      if (line_option == "OXT")
     {
-      stack_line = stack_oxt
+      stack_line = stack_OXT
       display_line = true;
     }
     if (line_option == "SLC6A4A")
     {
-      stack_line = stack_slc6a4a
+      stack_line = stack_SLC6A4A
       display_line = true;
     }
      if (line_option == "SLC6A4B")
     {
-      stack_line = stack_slc6a4b
+      stack_line = stack_SLC6A4B
       display_line = true;
     }
      if (line_option == "SST1")
     {
-      stack_line = stack_sst1
+      stack_line = stack_SST1
       display_line = true;
     }
      if (line_option == "TH1")
     {
-      stack_line = stack_th1
+      stack_line = stack_TH1
       display_line = true;
     }
-     if (line_option == "VACHT")
+      if (line_option == "TH2")
     {
-      stack_line = stack_vacht
+      stack_line = stack_TH2
+      display_line = true;
+    }
+     if (line_option == "VACHTB")
+    {
+      stack_line = stack_VACHTB
       display_line = true;
     }
 
@@ -400,99 +429,124 @@
 
     // Select Mask
     var display_mask = false;
+    if (mask_option == "dENT")
+    {
+      stack_mask = stack_dENT;
+      display_mask = true;
+    }
     if (mask_option == "DL")
     {
-      stack_mask = stack_dl;
+      stack_mask = stack_DL;
+      display_mask = true;
+    }
+    if (mask_option == "GC")
+    {
+      stack_mask = stack_GC;
       display_mask = true;
     }
     if (mask_option == "Hb")
     {
-      stack_mask = stack_hb;
+      stack_mask = stack_Hb;
       display_mask = true;
     }
     if (mask_option == "Hc")
     {
-      stack_mask = stack_hc;
+      stack_mask = stack_Hc;
       display_mask = true;
     }
     if (mask_option == "Hd")
     {
-      stack_mask = stack_hd;
+      stack_mask = stack_Hd;
+      display_mask = true;
+    }
+    if (mask_option == "IPN")
+    {
+      stack_mask = stack_IPN;
       display_mask = true;
     }
     if (mask_option == "LC")
     {
-      stack_mask = stack_lc;
+      stack_mask = stack_LC;
+      display_mask = true;
+    }
+    if (mask_option == "LR")
+    {
+      stack_mask = stack_LR;
       display_mask = true;
     }
     if (mask_option == "NLV")
     {
-      stack_mask = stack_nlv;
+      stack_mask = stack_NLV;
       display_mask = true;
     }
     if (mask_option == "NMLF")
     {
-      stack_mask = stack_nmlf;
+      stack_mask = stack_NMLF;
       display_mask = true;
     }
     if (mask_option == "OB")
     {
-      stack_mask = stack_ob;
+      stack_mask = stack_OB;
       display_mask = true;
     }
     if (mask_option == "OT")
     {
-      stack_mask = stack_ot;
+      stack_mask = stack_OT;
       display_mask = true;
     }
     if (mask_option == "P")
     {
-      stack_mask = stack_p;
+      stack_mask = stack_P;
       display_mask = true;
     }
     if (mask_option == "PGZ")
     {
-      stack_mask = stack_pgz;
+      stack_mask = stack_PGZ;
       display_mask = true;
     }
     if (mask_option == "PoA")
     {
-      stack_mask = stack_poa;
+      stack_mask = stack_PoA;
       display_mask = true;
     }
     if (mask_option == "PPd")
     {
-      stack_mask = stack_ppd;
+      stack_mask = stack_PPd;
       display_mask = true;
     }
     if (mask_option == "PPv")
     {
-      stack_mask = stack_ppv;
+      stack_mask = stack_PPv;
       display_mask = true;
     }
     if (mask_option == "PrT")
     {
-      stack_mask = stack_prt;
+      stack_mask = stack_PrT;
       display_mask = true;
     }
     if (mask_option == "PT")
     {
-      stack_mask = stack_pt;
+      stack_mask = stack_PT;
       display_mask = true;
     }
-    if (mask_option == "sP")
+    if (mask_option == "sbP")
     {
-      stack_mask = stack_sbp;
+      stack_mask = stack_sbP;
       display_mask = true;
     }
     if (mask_option == "SR")
     {
-      stack_mask = stack_sr;
+      stack_mask = stack_SR;
       display_mask = true;
     }
-    if (mask_option == "vHb")
+    if (mask_option == "TSc")
     {
-      stack_mask = stack_vhb;
+      stack_mask = stack_TSc;
+      display_mask = true;
+    }
+    if (mask_option == "vENT")
+    {
+      stack_mask = stack_vENT;
       display_mask = true;
     }
 
@@ -535,11 +589,14 @@
     </select></label>
     <label for="line_menu">Line<select name="line_menu" id="line_menu" oninput="update()">
       <option value="none" selected>-</option>
+      <option value="AVP">AVP</option>
+      <option value="CB1">CB1</option>
       <option value="CHAT1A">CHAT1A</option>
       <option value="CRH">CRH</option>
       <option value="DAT">DAT</option>
       <option value="GALN">GALN</option>
       <option value="HDC">HDC</option>
+      <option value="KISS1">KISS1</option>
       <option value="NPY">NPY</option>
       <option value="OTPA">OTPA</option>
       <option value="OTPB">OTPB</option>
@@ -548,15 +605,20 @@
       <option value="SLC6A4B">SLC6A4B</option>
       <option value="SST1">SST1</option>
       <option value="TH1">TH1</option>
-      <option value="VACHT">VACHT</option>
+      <option value="TH2">TH2</option>
+      <option value="VACHTB">VACHTB</option>
     </select></label>
     <label for="mask_menu">Mask<select name="mask_menu" id="mask_menu" oninput="update()">
       <option value="none" selected>-</option>
+       <option value="dENT">dENT</option>
       <option value="DL">DL</option>
+       <option value="GC">GC</option>
       <option value="Hb">Hb</option>
       <option value="Hc">Hc</option>
       <option value="Hd">Hd</option>
+       <option value="IPN">IPN</option>
       <option value="LC">LC</option>
+       <option value="LR">LR</option>
       <option value="NLV">NLV</option>
       <option value="NMLF">NMLF</option>
       <option value="OB">OB</option>
@@ -570,7 +632,8 @@
       <option value="PT">PT</option>
       <option value="sbP">sbP</option>
       <option value="SR">SR</option>
-      <option value="vHb">vHb</option>
+       <option value="TSc">TSc</option>
+      <option value="vENT">vENT</option>
     </select></label>
     </center>
   </div>
